@@ -130,7 +130,7 @@ function shouldIgnoreRequest (request, agent) {
     }
   }
 
-  if (!agent.currentTransaction) {
+  if (!agent.currentTransaction || agent.currentTransaction.ended) {
     agent.logger.trace('no active transaction found, skipping sqs instrumentation')
     return true
   }
