@@ -45,6 +45,8 @@ Notes:
   respectively. As well, <<span-action, `span.action`>> will now be the HTTP
   method (e.g. "GET", "PUT", "POST"), rather than "http". ({pull}2075[#2075])
 
+* Fixed error where SQS messages sent without an active transactions could
+  crash the agent.
 
 [[release-notes-x.x.x]]
 ==== 3.16.0 - 2021/06/14
